<?xml version="1.0"?>
<package format="2">
  <name>yolact_ros</name>
  <version>1.0.0</version>
  <description>The 'em_spco_tidy_up' package enables probabilistic tidying using Spatial Concepts (SpaCoTy).</description>

  <maintainer email="isobe.shota@em.ci.ritsumei.ac.jp">Shota Isobe</maintainer>
  <license>MIT</license>
  <url type="website">http://em.ci.ritsumei.ac.jp/</url>
  <author email="isobe.shota@em.ci.ritsumei.ac.jp">Shota Isobe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>




</package>
